--- a/static/css/page/index.styl
+++ b/static/css/page/index.styl
@@ -17,10 +17,15 @@
       height img-width
       text-align center
       overflow hidden
-      vertical-align middle
+      display table
+      .img
+        vertical-align middle
+        display table-cell
+        text-align center
       img
         max-width img-width
         max-height img-width
+        _height 100%
     h4
       padding 0 20px
       width 120px
@@ -181,14 +186,16 @@
       width 100%
       text-align center
       bottom 20px
-      right 30px
+      height 20px
       .slider-btn
+        font-size 0
+        display inline-block
+        _zoom 1
+        *display inline
         width 20px
         height 20px
-        display inline-block
-        *display inline
-        zoom 1
-        margin 0 10px
+        margin 0 5px
+        z-index 10
         background-color #FFF
         border-radius(10px)
         &.active
