--- a/static/css/page/common/footer.styl
+++ b/static/css/page/common/footer.styl
@@ -3,8 +3,11 @@
   margin-top 30px
   margin-bottom 50px
   .footer-pic
+    width 1200px
+    height 67px
     margin-bottom 20px
     margin-top 30px
+    background unquote('url(/static/img/'+season+'-footer.png)') 0 0 no-repeat
   .footer-public
     width 1200px
     .item
