--- a/static/css/page/index.styl
+++ b/static/css/page/index.styl
@@ -12,16 +12,19 @@
     height 240px
     width img-width
     margin-top 10px
+    .img-box-parent
+      table-layout fixed
+      display table
     .img-box
       padding 5px 0
       width img-width
       height img-width
       *font-size 120px
-      zoom 1
-      text-align center
+      *zoom 1
       overflow hidden
       display table-cell
       vertical-align middle
+
       img
         display block
         margin auto
