--- a/static/css/common.styl
+++ b/static/css/common.styl
@@ -9,6 +9,11 @@ sub-color = autumn-sub-color
 @require "./ui/button.styl"
 @require "./ui/input.styl"
 
+::selection
+  color #ffffff
+  background-color main-color
+  text-shadow 0 0 20px #FFF
+
 .container
   width 1200px
   margin-left auto
