--- a/static/css/core/variable.styl
+++ b/static/css/core/variable.styl
@@ -1,8 +1,18 @@
 /* 默认字体 */
-font = "Microsoft YaHei","微软雅黑"
+font = "Helvetica Neue", "Microsoft YaHei", Helvetica, "Lucida Grande", "Luxi Sans", Arial, sans-serif
 /* 默认a标签颜色 */
-a-color = #757575
+a-color = #434242
+/* a浅灰色 */
+a-lcolor = #757575
 /* 默认border颜色 */
 border-color = #c8c8c8
 /* 图片宽度 */
 img-width = 160px
+/* 默认背景颜色 */
+back-color = #f7f7f7
+/* 深背景颜色 */
+back-dcolor = #e1e1e1
+/* 书名颜色 */
+book-color = #000
+/* strong颜色 */
+strong-color = #ff0c00
