--- a/static/css/page/common/header.styl
+++ b/static/css/page/common/header.styl
@@ -46,6 +46,7 @@
           background-position -96px -36px
 
   .logo-search
+    background-color #FFF
     .logo
       width 320px
       height 132px
@@ -80,5 +81,13 @@
       padding-top 15px
       line-height 1
       width 480px
-      height 40px
+      height 30px
+      overflow hidden
+      a,span
+        font-size 14px
+        color a-lcolor
+        padding-right 5px
+      a:hover
+        color main-color
+
 @require "./nav.styl"
