--- a/static/css/ui/button.styl
+++ b/static/css/ui/button.styl
@@ -7,6 +7,7 @@
   width 120px
   height 44px
   line-height 1
-  font-size 16px
+  font-size 18px
   font-family font
+  text-shadow(0 0 2px #FFF)
   border-radius(0 3px 3px 0)
