--- a/static/css/common.styl
+++ b/static/css/common.styl
@@ -12,14 +12,15 @@ sub-color = autumn-sub-color
 ::selection
   color #ffffff
   background-color main-color
-  text-shadow 0 0 20px #FFF
+  text-shadow(0 0 20px #FFF)
 
 .container
   width 1200px
   margin-left auto
   margin-right auto
-
 .left
   float left
 .right
   float right
+body
+  background unquote('url(/static/img/'+season+'-bg.png)')
