--- a/static/css/core/function.styl
+++ b/static/css/core/function.styl
@@ -13,3 +13,15 @@ opacity(s)
   opacity s
   -moz-opacity s
   filter unquote('progid:DXImageTransform.Microsoft.Alpha(Opacity=' + round(s * 100) + ')')
+
+text-shadow(s)
+  text-shadow s
+  -moz-text-shadow s
+  -webkit-text-shadow s
+  //filter unquote('progid:DXImageTransform.Microsoft.Blur(pixelRadius=0,MakeShadow=false);')
+  font-weight unquote('bold\0\9')
+  _font-weight bold
+box-shadow(s)
+  -webkit-box-shadow s
+  -moz-box-shadow s
+  box-shadow s
