--- a/static/css/page/common/header.styl
+++ b/static/css/page/common/header.styl
@@ -69,6 +69,8 @@
           height 16px
           background unquote('url(/static/img/icon/'+season+'-icons.png)') 0 0 no-repeat
     .search-box
+      width 650px
+      height auto
       margin-top 35px
       a
         display inline-block
