--- a/static/css/page/index.styl
+++ b/static/css/page/index.styl
@@ -64,7 +64,6 @@
     height 45px
     border-bottom 3px solid main-color
     font-size 16px
-    //font-weight 700
     letter-spacing 1px
     line-height 45px
     text-indent 5px
@@ -94,7 +93,6 @@
     line-height 40px
     color main-color
     font-size 16px
-    //font-weight 700
     text-shadow(0 0 1px main-color)
     text-indent 10px
   .tab-sidebar-box
@@ -240,7 +238,7 @@
       color main-color
       line-height 25px
       text-indent 5px
-      text-shadow(0 0 .5px main-color)
+      text-shadow(0 0 1px main-color)
     .notice-list
       box-shadow(0 0 2px border-color)
       border 1px solid border-color
@@ -282,7 +280,6 @@
       height 45px
       border-bottom 3px solid main-color
       font-size 16px
-      //font-weight 700
       letter-spacing 1px
       line-height 45px
       text-indent 5px
@@ -530,16 +527,17 @@
           line-height 30px
           text-align center
           font-size 12px
-          font-weight normal
           letter-spacing auto
           color #000
           text-indent 0
           border none
           text-shadow(none)
+          font-weight normal
           &:first-letter
             font-size 12px
             color #000
             text-shadow(none)
+            font-weight normal
     .tab-item
       display none
       width 1200px
@@ -554,7 +552,6 @@
     height 45px
     border-bottom 3px solid main-color
     font-size 16px
-    //font-weight 700
     letter-spacing 1px
     line-height 45px
     text-indent 5px
