--- a/static/css/page/common/nav.styl
+++ b/static/css/page/common/nav.styl
@@ -44,7 +44,7 @@
             text-decoration none
         font-size 14px
         line-height 25px
-        text-shadow(0 1px 1px main-color)
+        text-shadow(0 0 1px main-color)
 
       dd
         font-size 12px
