--- a/static/css/page/common/nav.styl
+++ b/static/css/page/common/nav.styl
@@ -10,6 +10,7 @@
     border-right 1px solid main-color
     background-color sub-color
     position relative
+    z-index 30
     h3
       line-height nav-height
       text-align center
@@ -24,32 +25,79 @@
       display none
       position absolute
       left 0
+      z-index 30
       top nav-height
-      border 1px solid main-color
+      border 2px solid main-color
       border-top none
       width auto
       height auto
       background-color #FFF
-      box-shadow(0 0 3px main-color)
-      dl
-        width 186px
+      dl.item
+        position relative
+        z-index 30
+        width 184px
         padding 0 10px
         border-top 1px dashed main-color
         &.first-item
           border-top none
-      dt
-        a
-          color main-color
-          &:hover
-            text-decoration none
-        font-size 14px
-        line-height 25px
-        text-shadow(0 0 1px main-color)
-
-      dd
-        font-size 12px
-        line-height 25px
-        padding-bottom 5px
+          .sub-item
+            border-top none
+            top 0
+        &:hover
+          background-color main-color
+          margin-bottom -1px
+          text-shadow(0 0 1px #FFF)
+          a
+            color #FFF
+          dt
+            a
+              font-weight 700
+          .sub-item
+            display block
+        &.active
+          background-color main-color
+          margin-bottom -1px
+          a
+            color #FFF
+          dt
+            a
+              font-weight 700
+          .sub-item
+            display block
+        .sub-item
+          width 520px
+          height auto
+          display none
+          padding 30px
+          border 2px solid main-color
+          position absolute
+          top -1px
+          left 204px
+          z-index 30
+          background-color #FFF
+          a
+            display inline-block
+            padding 0 15px
+            color a-color
+            line-height 25px
+        dt
+          a
+            color main-color
+            &:hover
+              text-decoration none
+          font-size 15px
+          line-height 27px
+          text-shadow(0 0 1px main-color)
+          &.on
+            padding 8px 0
+        dd
+          padding-left 5px
+          font-size 13px
+          line-height 25px
+          padding-bottom 5px
+          a
+            padding-right 5px
+            display inline-block
   .main-nav
     margin-left 10px
     line-height nav-height
