--- a/static/css/page/common/nav.styl
+++ b/static/css/page/common/nav.styl
@@ -46,21 +46,14 @@
         &:hover
           background-color main-color
           margin-bottom -1px
+          margin-top -1px
           text-shadow(0 0 1px #FFF)
           a
             color #FFF
           dt
+            background unquote('url(/static/img/icon/'+season+'-icon-right.png)') right center no-repeat
             a
-              font-weight 700
-          .sub-item
-            display block
-        &.active
-          background-color main-color
-          margin-bottom -1px
-          a
-            color #FFF
-          dt
-            a
+              color #FFF
               font-weight 700
           .sub-item
             display block
@@ -77,10 +70,13 @@
           background-color #FFF
           a
             display inline-block
-            padding 0 15px
+            padding 0 12px
             color a-color
             line-height 25px
+            &:hover
+              color main-color
         dt
+          background url(/static/img/icon/icon-right.png) right center no-repeat
           a
             color main-color
             &:hover
@@ -90,6 +86,8 @@
           text-shadow(0 0 1px main-color)
           &.on
             padding 8px 0
+            a
+              display block
         dd
           padding-left 5px
           font-size 13px
