--- a/static/css/page/common/footer.styl
+++ b/static/css/page/common/footer.styl
@@ -1,4 +1,14 @@
-﻿#footer
+﻿.backtop
+  width 60px
+  height 60px
+  position fixed
+  z-index 100
+  bottom 40px
+  background url(/static/img/icon/backtop1.png) 0 0 no-repeat
+  display none
+  &:hover
+    background url(/static/img/icon/backtop2.png) 0 0 no-repeat
+#footer
   background-color #FFF
   border-top 7px solid main-color
   margin-top 30px
