--- a/static/css/ui/button.styl
+++ b/static/css/ui/button.styl
@@ -11,3 +11,25 @@
   font-family font
   text-shadow(0 0 2px #FFF)
   border-radius(0 3px 3px 0)
+.btn-num
+  width 30px
+  height 30px
+  border none
+  background-color back-dcolor
+  font-weight normal
+  cursor pointer
+.btn-add
+  border none
+  width 160px
+  height 40px
+  border-radius(5px)
+  font-size 18px
+  text-shadow(0 0 1px #FFF)
+.btn-collect
+  background-color back-color
+  width 113px
+  height 38px
+  border-radius(5px)
+  color a-color
+  cursor pointer
+  border 1px solid border-color
