--- a/static/css/ui/input.styl
+++ b/static/css/ui/input.styl
@@ -9,3 +9,11 @@
   height 24px
   line-height 24px
   padding 7px 5px
+.input-num
+  width 45px
+  padding 5px
+  text-align center
+  font-size 12px
+  height 18px
+  line-height 18px
+  border 1px solid back-dcolor
