--- a/static/css/ui/button.styl
+++ b/static/css/ui/button.styl
@@ -24,12 +24,15 @@
   height 40px
   border-radius(5px)
   font-size 18px
+  text-indent 25px
   text-shadow(0 0 1px #FFF)
+  background url(/static/img/icon/cart-icon.png) 15px center no-repeat main-color
 .btn-collect
-  background-color back-color
   width 113px
   height 38px
+  text-indent 15px
   border-radius(5px)
   color a-color
   cursor pointer
   border 1px solid border-color
+  background url(/static/img/icon/collect-icon.png) 15px center no-repeat back-color
